--- a/docs/1.md
+++ b/docs/1.md
@@ -10,17 +10,23 @@
 ## 奖励
 
 ### 游戏中物品奖励
+
 奖励的产生和发放也是在 `CarCarGameLogic` 合约中完成
 
 1. 后台调用 `giveAwayWinnerFragment` 方法，给用户发放胜利者碎片
 2. 玩家调用 `claimWinnerBlindBox` 方法，用10个胜利者碎片换取1个胜利者盲盒
 3. 玩家调用 `openWinnerBlindBoxRequest` 方法，发起开盲盒申请
-4. 后台监听 `OpenBlindBox` 事件， 调用 `deliverOpenedBlindBox` 方法给玩家发放奖励
+4. 后台监听 `OpenBlindBox` 事件， 调用 `deliverOpenedBlindBox` 方法给玩家发放物品奖励
 
-### 持有赛车场土地nft奖励
+### 持有赛车场土地nft分红奖励
+
+1. 后台通过监听 `CarCarNft` 合约的 `TransferSingle` 事件在数据库中记录赛车场土地NFT的持有情况，每天进行结算，在数据库中记录总的收益。
+2. 玩家发起提取奖励申请，后台调用 `CarCarToken` 合约中的 `tranfer`方法把奖励打到用户地址
 
 ### 赛车维修费分红奖励
 
+1. 部署 `CarCarGameLogic` 合约时的第三个参数是一个钱包地址，这个地址存放的是游戏中产生的赛车维修费，后台统计赛车场的玩家持有情况，每天进行结算，在数据库中记录总的收益
+2. 玩家发起提取奖励申请，后台调用 `CarCarToken` 合约中的 `tranfer`方法把奖励打到用户地址
 
 ## 物品拍卖
 
